// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search integration tests is a snapshot with English localization 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          readonly=""
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search integration tests is a snapshot with Russian localization 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          readonly=""
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            Найти
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is a basic snapshot 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is a snapshot with IsReadOnly equal to true 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          readonly=""
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is a snapshot with clearButton equal to true 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 "
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 px-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-neutral-600 enabled:hover:text-neutral-700 enabled:active:text-neutral-800 dark:text-neutral-300 dark:enabled:hover:text-neutral-200 dark:enabled:active:text-neutral-100   [&]:text-neutral-400 enabled:hover:[&]:text-neutral-300 enabled:active:[&]:text-neutral-200 dark:[&]:text-dark-neutral-600 dark:enabled:hover:text-dark-neutral-700 dark:enabled:active:text-dark-neutral-800 absolute left-[0.375rem] top-1/2 -translate-y-1/2"
          type="button"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/cancel.svg#cancel"
              />
            </svg>
            To clear
          </span>
        </button>
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is a snapshot with isDisabled set to true 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150  opacity-disabled cursor-not-allowed border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          disabled=""
          id="test-search"
          inputmode="search"
          name="test-search"
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0 opacity-disabled cursor-not-allowed text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
          disabled=""
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is a snapshot with labelHidden set to true 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-neutral-300 dark:border-dark-neutral-350 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;

exports[`Search tests is snapshot with IsInvalid equal to true 1`] = `
<div
  data-testid="test-search"
>
  <form
    autocomplete="off"
    role="search"
  >
    <label>
      <span
        class="block text-100 mb-1 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 sr-only"
      >
        test-search
      </span>
      <div
        class="relative"
      >
        <input
          aria-invalid="true"
          class="outline-none w-full h-[2.25rem] py-2 bg-neutral-0 dark:bg-dark-neutral-200 border-neutral-300 dark:border-dark-neutral-350 text-neutral-1000 dark:text-dark-neutral-900 rounded rounded-[0.1875rem] border-2 text-100 enabled:hover:bg-neutral-100 enabled:hover:border-neutral-400 dark:enabled:hover:bg-dark-neutral-250 dark:enabled:hover:border-dark-neutral-350 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150   border-red-600 dark:border-red-300 pl-2 pr-8"
          id="test-search"
          inputmode="search"
          name="test-search"
          type="text"
          value=""
        />
        <button
          class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-0  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-0 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600   absolute top-1/2 right-[0.375rem] -translate-y-1/2"
        >
          <span
            class="inline-flex items-center"
          >
            <svg
              class="w-6 h-6 p-0.5 fill-current"
              viewBox="0 0 32 32"
            >
              <use
                href="/assets/icons/loupe.svg#loupe"
              />
            </svg>
            To find
          </span>
        </button>
      </div>
    </label>
  </form>
</div>
`;
